--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,12 @@
 {
   "version": 2,
   "public": true,
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/$1" }
-  ],
+  "cleanUrls": true,
+  "trailingSlash": false,
   "headers": [
     {
-      "source": "/Music/(.*)",
+      "source": "/(.*)",
       "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        },
-        {
-          "key": "Content-Type",
-          "value": "audio/mpeg"
-        },
         {
           "key": "Access-Control-Allow-Origin",
           "value": "*"
@@ -26,15 +17,6 @@
         },
         {
           "key": "Access-Control-Allow-Headers",
-          "value": "Origin, X-Requested-With, Content-Type, Accept"
-        }
-      ]
-    },
-    {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "Access-Control-Allow-Origin",
           "value": "*"
         }
       ]
