Update Vercel config for MP3 files and add test page

--- a/vercel.json
+++ b/vercel.json
@@ -3,20 +3,16 @@
   "public": true,
   "cleanUrls": false,
   "trailingSlash": false,
-  "headers": [
+  "routes": [
     {
-      "source": "/Music/(.*)",
-      "headers": [
-        {
-          "key": "Content-Type",
-          "value": "audio/mpeg"
-        },
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
-    },
+      "src": "/Music/.*\\.mp3",
+      "headers": {
+        "Cache-Control": "public, max-age=31536000, immutable",
+        "Content-Type": "audio/mpeg"
+      }
+    }
+  ],
+  "headers": [
     {
       "source": "/(.*)",
       "headers": [
